<?xml version="1.0"?>
<package format="2">
  <name>pos_array_ros</name>
  <version>0.0.0</version>
  <description>ROS samples for custom PosArray messages</description>
  <maintainer email="tasada381@gmail.com">Takumi Asada</maintainer>

  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <!-- add custom msgs depended -->
  <depend>pos_array_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
